--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-gesture-handler": "^1.3.0",
-    "react-navigation": "^3.11.1",
-    "realm": "^2.29.1"
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
