--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-sensitive-info')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
