--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "eslint": "^6.0.1",
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-sensitive-info": "^5.4.2",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
@@ -19,7 +21,6 @@
     "@babel/runtime": "7.5.4",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
-    "eslint": "6.0.1",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
