--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.1",
     "eslint": "^6.0.1",
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-sensitive-info": "^5.4.2",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
