--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^6.0.1",
     "react": "16.8.6",
     "react-native": "0.60.3",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1"
   },
