--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-floating-action": "^1.17.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-numeric-input": "^1.8.1",
     "react-native-vector-icons": "^6.6.0",
