--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
     "eslint": "^6.0.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.3",
