--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-floating-action": "^1.17.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-numeric-input": "^1.8.1",
+    "react-native-speedometer-chart": "^0.7.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
