--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-floating-action": "^1.17.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.8.1",
     "react-native-speedometer-chart": "^0.7.3",
     "react-native-vector-icons": "^6.6.0",
