--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,8 @@ target 'buzzin' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'buzzinTests' do
     inherit! :search_paths
     # Pods for testing
