--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-copilot": "^2.4.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-speedometer-chart": "^0.7.3",
+    "react-native-svg": "^9.5.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
