--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.60.3",
     "react-native-actionsheet": "^2.4.2",
     "react-native-copilot": "^2.4.4",
+    "react-native-dropdownalert": "^4.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.8.3",
