--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.8.3",
+    "react-native-speedometer": "^1.0.3",
     "react-native-speedometer-chart": "^0.7.3",
     "react-native-svg": "^9.5.3",
     "react-native-vector-icons": "^6.6.0",
