--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-numeric-input": "^1.8.3",
     "react-native-speedometer": "^1.0.3",
     "react-native-svg": "^9.5.3",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
