testing haptic feedback using only default selection trigger

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'buzzin' do
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
 
+  pod 'RNReactNativeHapticFeedback', :path => '../node_modules/react-native-haptic-feedback'
+
   target 'buzzinTests' do
     inherit! :search_paths
     # Pods for testing
