--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-countdown-component": "^2.6.0",
     "react-native-dropdownalert": "^4.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-haptic": "^1.0.1",
     "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-speedometer": "^1.0.3",
