determined that the bug was related to the free apple dev account, android worked just fine no crash

--- a/ios/buzzin.xcodeproj/xcshareddata/xcschemes/buzzin.xcscheme
+++ b/ios/buzzin.xcodeproj/xcshareddata/xcschemes/buzzin.xcscheme
@@ -78,9 +78,10 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableASanStackUseAfterReturn = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
