wrote custom espresso test for android testing, tests all buttons on login and modal, runs through the walkthrough, and navigates through all the main screens, testing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -200,6 +200,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation('com.microsoft.appcenter:espresso-test-extension:1.4')
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
