--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "@react-native-community/slider": "^2.0.8",
     "eslint": "^6.1.0",
     "eslint-utils": "^1.4.2",
     "jetifier": "^1.6.3",
