--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-utils": "^1.4.2",
     "jetifier": "^1.6.3",
     "lodash": "^4.17.15",
+    "mocha": "^7.1.1",
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.3",
