--- a/ios/buzzin.xcodeproj/xcshareddata/xcschemes/buzzin.xcscheme
+++ b/ios/buzzin.xcodeproj/xcshareddata/xcschemes/buzzin.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "buzzin.app"
+               BuildableName = "kontrol.app"
                BlueprintName = "buzzin"
                ReferencedContainer = "container:buzzin.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "buzzin.app"
+            BuildableName = "kontrol.app"
             BlueprintName = "buzzin"
             ReferencedContainer = "container:buzzin.xcodeproj">
          </BuildableReference>
@@ -93,7 +93,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "buzzin.app"
+            BuildableName = "kontrol.app"
             BlueprintName = "buzzin"
             ReferencedContainer = "container:buzzin.xcodeproj">
          </BuildableReference>
@@ -114,7 +114,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "buzzin.app"
+            BuildableName = "kontrol.app"
             BlueprintName = "buzzin"
             ReferencedContainer = "container:buzzin.xcodeproj">
          </BuildableReference>
