--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/slider": "4.2.4",
+    "@react-navigation/material-bottom-tabs": "^6.2.12",
+    "@react-navigation/material-top-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "caniuse-lite": "^1.0.30001450",
     "deprecated-react-native-prop-types": "^4.0.0",
     "eslint": "^8.33.0",
@@ -25,20 +29,23 @@
     "mocha": "^10.2.0",
     "moment": "^2.29.4",
     "patch-package": "^6.5.1",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "^18.2.0",
+    "react-native": "^0.71.2",
     "react-native-calendar-picker": "^7.1.3",
     "react-native-copilot": "^2.5.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dropdownalert": "^4.5.1",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-multi-switch": "^1.2.0",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-paper": "^5.1.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-speedometer": "^1.0.5",
     "react-native-svg": "13.4.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-navigation": "3.11.1"
+    "react-native-tab-view": "^3.3.4",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
