--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/slider": "4.2.4",
+    "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/material-bottom-tabs": "^6.2.12",
     "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
